--- a/components/button/Button.css
+++ b/components/button/Button.css
@@ -82,3 +82,12 @@
     color: white;
     box-shadow: 0 0 20px rgba(255, 0, 255, 0.3);
 }
+
+.movies-grid.grid-size-4 .btn {
+    padding: 0.4rem 0.4rem;
+    font-size: 13px;
+}
+
+.movies-grid.grid-size-4 .btn span {
+    margin-left: 0;
+}
