--- a/components/button/Button.css
+++ b/components/button/Button.css
@@ -91,3 +91,8 @@
 .movies-grid.grid-size-4 .btn span {
     margin-left: 0;
 }
+
+.movies-grid.grid-size-5 .btn {
+    padding: 0.3rem 0.2rem;
+    font-size: 11px;
+}
