--- a/cyberpunk.css
+++ b/cyberpunk.css
@@ -1531,6 +1531,7 @@ h1 {
     backdrop-filter: blur(10px);
     opacity: 0;
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    height: 750px;
 }
 
 .movie-details-content.active {
@@ -1541,7 +1542,7 @@ h1 {
 .movie-details-header {
     display: flex;
     gap: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
 }
 
 .movie-details-poster {
@@ -1708,6 +1709,7 @@ h1 {
 .movie-details-streaming {
     margin-top: 1rem;
     min-height: 140px;
+    max-width: 430px;
 }
 
 .movie-details-description {
@@ -1772,7 +1774,7 @@ h1 {
 
 .streaming-grid-link {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
     gap: 1rem;
     text-decoration: none;
     transition: all 0.3s ease;
@@ -1786,6 +1788,10 @@ h1 {
 .streaming-grid-link:hover .streaming-service-item {
     border-color: #00ffff;
     box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+}
+
+.movie-details-streaming h3 {
+    margin-bottom: 0.5rem;
 }
 
 .streaming-service-item {
@@ -1903,7 +1909,7 @@ h1 {
     /* gap: 1.5rem; */
     justify-content: space-between;
     overflow-x: auto;
-    padding: 0.5rem;
+    padding: 0.5rem 0rem;
     scrollbar-width: thin;
     scrollbar-color: rgba(0, 255, 255, 0.5) rgba(0, 0, 0, 0.3);
 }
@@ -2171,9 +2177,42 @@ footer span {
 .justwatch-link {
     display: flex;
     justify-content: end;
-    margin-top: -0.5rem;
+    margin-top: -2rem;
+    max-width: 430px;
 }
 
 .justwatch-logo {
     width: 80px;
+}
+
+.modal-fade-in {
+    animation: modalFadeIn 0.25s ease-in-out forwards;
+}
+.modal-fade-out {
+  animation: modalFadeOut 0.25s forwards;
+}
+
+@keyframes modalFadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+@keyframes modalFadeOut {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+
+.modal-content-fade-in {
+    animation: modalContentFadeIn 0.25s cubic-bezier(0.4,0,1) forwards;
+}
+.modal-content-fade-out {
+  animation: modalContentFadeOut 0.25s ease-in-out forwards;
+}
+
+@keyframes modalContentFadeIn {
+    from { opacity: 0; transform: translate(-50%, -50%) scale(0.65); }
+    to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+}
+@keyframes modalContentFadeOut {
+    from { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+    to { opacity: 0; transform: translate(-50%, -50%) scale(0.65); }
 }
