--- a/cyberpunk.css
+++ b/cyberpunk.css
@@ -1050,6 +1050,10 @@ h1 {
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-content::-webkit-scrollbar {
+    display: none;
+}
+
 .modal-content.active {
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
