--- a/cyberpunk.css
+++ b/cyberpunk.css
@@ -1524,7 +1524,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%) scale(0.95);
     max-width: 800px;
-    width: 90%;
+    width: 800px;
     max-height: 80vh;
     overflow-y: auto;
     padding: 2rem;
@@ -1543,15 +1543,16 @@ h1 {
     opacity: 1;
 }
 
-.movie-details-header {
+/* .movie-details-header {
     display: flex;
+    flex-direction: column;
     gap: 2rem;
     margin-bottom: 2.5rem;
-}
+} */
 
 .movie-details-poster {
-    width: 180px;
-    height: 270px;
+    width: 190px;
+    height: 285px;
     border-radius: 15px;
     overflow: hidden;
     border: 2px solid #00ffff;
@@ -1564,13 +1565,52 @@ h1 {
     object-fit: cover;
 }
 
-.movie-details-info h2 {
+.movie-details-media-container {
+    display: flex;
+    gap: 2rem;
+    width: fit-content;
+}
+
+.movie-details-ratings-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto;
+    /* margin-bottom: auto; */
+}
+
+.movie-details-trailer {
+    width: 506px;
+}
+
+.movie-details-trailer iframe {
+    border: 2px solid #00ffff;
+    border-radius: 15px;
+}
+
+.movie-details-header {
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    margin-bottom: 1rem;
+}
+
+.movie-details-header h2 {
     font-size: 1.8rem;
     line-height: 1.3;
     background: linear-gradient(90deg, #ff00ff, #00ffff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0 0 10px rgba(255, 0, 255, 0.5);
+    white-space: nowrap;
+}
+
+.movie-details-info {
+    /* display: flex; */
+}
+
+.movie-details-additional-info {
+    display: flex;
+    justify-content: space-between;
 }
 
 .movie-details-year {
@@ -1591,11 +1631,20 @@ h1 {
 }
 
 .movie-details-external-ratings {
-    position: absolute;
+    background: transparent;
+    color: white;
+    border: 0px;
+    font-size: 15px;
+    cursor: pointer;
+    /* position: fixed; */
     left: 0;
-    margin-left: 2rem;
-    top: 310px;
-    margin-bottom: 1.5rem;
+    margin-left: 1.5rem;
+    display: flex;
+    top: 150px;
+    gap: 2rem;
+    width: 100%;
+    /* margin-top: var(--external-ratings-margin-top); */
+    width: fit-content;
 }
 
 .movie-details-external-ratings h3 {
@@ -1606,9 +1655,9 @@ h1 {
 }
 
 .movie-details-external-ratings span {
+    display: flex;
     align-items: center;
-    margin-top: -10px;
-    margin-left: 10px;
+    gap: 0.5rem;
 }
 
 .ratings-table {
@@ -1620,7 +1669,7 @@ h1 {
 .ratings-table td {
     padding: 0rem 0.25rem;
     vertical-align: middle;
-    font-size: 0.85rem;
+    font-size: 1rem;
     color: #f0f0f0;
 }
 
@@ -1710,16 +1759,86 @@ h1 {
     font-size: 0.9rem;
 }
 
+.movie-details-rating span {
+    background: linear-gradient(135deg, #f0f, #0ff, #f0f);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
 .movie-details-streaming {
     margin-top: 1rem;
     min-height: 140px;
     max-width: 430px;
 }
 
+.movie-details-cast {
+    /* max-width: 430px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    height: 270px; */
+}
+
+/* .movie-details-cast::-webkit-scrollbar {
+    display: none;
+} */
+
+.movie-details-cast h3 {
+    color: #00ffff;
+    text-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+}
+
+.movie-details-cast-list {
+    display: flex;
+    gap: 1rem;
+    max-width: 430px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    height: 300px;
+}
+
+.movie-details-cast-list::-webkit-scrollbar {
+    display: none;
+}
+
+.movie-details-cast-item {
+    width: 100px;
+    height: 150px;
+    min-width: 100px;
+    min-height: 150px;
+}
+
+.movie-details-cast-image {
+    width: 100px;
+    height: 150px;
+}
+
+.movie-details-cast-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.movie-details-cast-name {
+    background: linear-gradient(135deg, #f0f, #0ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin-top: 0.5rem;
+}
+
+.movie-details-cast-character {
+    color: #7cffffa8;
+}
+
 .movie-details-description {
+    margin-top: 1rem;
     font-size: 1rem;
     line-height: 1.6;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     max-height: 200px;
     overflow-y: auto;
     padding-right: 1rem;
@@ -1778,8 +1897,8 @@ h1 {
 
 .streaming-grid-link {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
+    gap: 0.6rem;
     text-decoration: none;
     transition: all 0.3s ease;
     width: 500px;
@@ -1805,7 +1924,7 @@ h1 {
     background: rgba(0, 0, 0, 0.6);
     border: 1px solid rgba(0, 255, 255, 0.3);
     border-radius: 10px;
-    padding: 0.8rem;
+    padding: 0.2rem;
     transition: all 0.3s ease;
     aspect-ratio: 1;
 }
@@ -1910,8 +2029,9 @@ h1 {
 
 .also-watch-movies {
     display: flex;
-    /* gap: 1.5rem; */
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 1.5rem;
+    /* justify-content: space-between; */
     overflow-x: auto;
     padding: 0.5rem 0rem;
     scrollbar-width: thin;
@@ -1933,13 +2053,14 @@ h1 {
 }
 
 .also-watch-movie {
-    flex: 0 0 220px;
+    /* flex: 0 0 220px; */
     background: rgba(0, 0, 0, 0.6);
     border: 1px solid rgba(0, 255, 255, 0.3);
     border-radius: 10px;
     overflow: hidden;
     transition: all 0.3s ease;
     cursor: pointer;
+    width: 185px;
 }
 
 .also-watch-movie:hover {
@@ -1949,8 +2070,8 @@ h1 {
 }
 
 .also-watch-poster {
-    width: 100%;
-    height: 280px;
+    width: 185px;
+    height: 185px;
 }
 
 .also-watch-movie img {
