--- a/cyberpunk.css
+++ b/cyberpunk.css
@@ -193,6 +193,11 @@ h1 {
     z-index: 1;
 }
 
+.sort-select:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 .view-controls {
     margin-left: auto;
     display: flex;
@@ -984,6 +989,61 @@ h1 {
     border-radius: 10px;
     font-size: 0.75rem;
     font-weight: 600;
+}
+
+.context-menu-wrapper {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99Z;
+}
+
+.context-menu {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 15px;
+    padding: 1rem;
+    z-index: 999;
+    /* min-width: 200px;
+    max-width: 300px; */
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.context-menu-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.context-menu-buttons button {
+    text-align: left;
+}
+
+.context-menu-remove-button span {
+    margin-left: 0;
+    margin-right: 0;
+    background: #f0f;
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+.context-menu-mark-watched-button span {
+    margin-left: 0;
+    margin-right: 0;
+    background: white;
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
 /* .remove-btn {
